refactor: remove orchid placement recommendations
